[gd_scene load_steps=11 format=2]

[ext_resource path="res://scenes/brother/bro1.gd" type="Script" id=1]
[ext_resource path="res://images/dia/bro_main.jpg" type="Texture" id=2]
[ext_resource path="res://addons/egoventure/nodes/hotspots/dialog_hotspot.gd" type="Script" id=3]
[ext_resource path="res://theme.tres" type="Theme" id=4]
[ext_resource path="res://misc/fonts/KALAM-REGULAR.TTF" type="DynamicFontData" id=5]

[sub_resource type="StyleBoxEmpty" id=28]

[sub_resource type="DynamicFont" id=27]
size = 48
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
extra_spacing_top = 10
extra_spacing_bottom = 10
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=24]
size = 46
use_filter = true
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxEmpty" id=29]

[sub_resource type="StyleBoxEmpty" id=30]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
centered = false

[node name="bro_q1_hs" type="RichTextLabel" parent="."]
margin_left = 317.444
margin_top = 351.436
margin_right = 805.444
margin_bottom = 482.436
rect_rotation = -7.4
mouse_default_cursor_shape = 1
theme = ExtResource( 4 )
custom_styles/normal = SubResource( 28 )
custom_fonts/bold_font = SubResource( 27 )
custom_fonts/normal_font = SubResource( 24 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "Do you know which friend?"
scroll_active = false
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
dialog = "res://dialogs/bro1_q1.tres"

[node name="bro_q2_hs" type="RichTextLabel" parent="."]
margin_left = 338.999
margin_top = 505.577
margin_right = 803.999
margin_bottom = 631.577
rect_rotation = -7.4
mouse_default_cursor_shape = 1
theme = ExtResource( 4 )
custom_styles/normal = SubResource( 29 )
custom_fonts/bold_font = SubResource( 27 )
custom_fonts/normal_font = SubResource( 24 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "Did he tell you where the house is?"
scroll_active = false
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
dialog = "res://dialogs/bro1_q2.tres"

[node name="bro_q3_hs" type="RichTextLabel" parent="."]
margin_left = 362.883
margin_top = 659.322
margin_right = 789.883
margin_bottom = 811.322
rect_rotation = -7.4
mouse_default_cursor_shape = 1
theme = ExtResource( 4 )
custom_styles/normal = SubResource( 30 )
custom_fonts/bold_font = SubResource( 27 )
custom_fonts/normal_font = SubResource( 24 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "Thank you for your help."
scroll_active = false
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="bro_q3_hs" to="." method="_on_bro_q3_hs_pressed"]
